<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ghosts</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_choose_game">ChooseGame</string>
    <string name="title_activity_game_over">GameOver</string>
    <string name="hard">Hard</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="button">Button</string>
    <string name="difficulty">Difficulty</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
